--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "con4gis/core",
+    "name": "kaibuecking/core",
     "type": "contao-bundle",
     "description": "Core bundle with functionality needed for every con4gis application.",
     "keywords": ["con4gis", "core", "contao", "c4g", "jQueryGui", "con4gis_core", "CoreBundle"],
