--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     "require": {
         "php": "^5.6|^7.0",
         "contao/core-bundle": "^4.4",
-        "doctrine/ORM": "^2.5",
+        "doctrine/orm": "^2.5",
         "doctrine/data-fixtures": "^1.2",
         "menatwork/contao-multicolumnwizard": "^3.3"
     },
